dsl/grammar/.antlr/BedParser.java
// Generated from c:\Users\joxto\Downloads\BEDFLOW-ATLAS-TCC-2\dsl\grammar\Bed.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, NUMBER=116, INTEGER=117, UNIT=118, STRING=119, 
		BOOLEAN=120, WS=121, COMMENT=122, BLOCK_COMMENT=123;
	public static final int
		RULE_bedFile = 0, RULE_section = 1, RULE_bedSection = 2, RULE_bedProperty = 3, 
		RULE_visibilityProperty = 4, RULE_lidsSection = 5, RULE_lidsProperty = 6, 
		RULE_lidType = 7, RULE_particlesSection = 8, RULE_particlesProperty = 9, 
		RULE_particleKind = 10, RULE_packingSection = 11, RULE_packingProperty = 12, 
		RULE_demProperty = 13, RULE_packingMethod = 14, RULE_exportSection = 15, 
		RULE_exportProperty = 16, RULE_formatList = 17, RULE_wallMode = 18, RULE_fluidMode = 19, 
		RULE_cfdSection = 20, RULE_cfdProperty = 21, RULE_cfdRegime = 22, RULE_geometrySection = 23, 
		RULE_geometryProperty = 24, RULE_geometryMode = 25, RULE_generationSection = 26, 
		RULE_generationProperty = 27, RULE_generationBackend = 28, RULE_sliceSection = 29, 
		RULE_sliceProperty = 30, RULE_statistical2dSection = 31, RULE_statistical2dProperty = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"bedFile", "section", "bedSection", "bedProperty", "visibilityProperty", 
			"lidsSection", "lidsProperty", "lidType", "particlesSection", "particlesProperty", 
			"particleKind", "packingSection", "packingProperty", "demProperty", "packingMethod", 
			"exportSection", "exportProperty", "formatList", "wallMode", "fluidMode", 
			"cfdSection", "cfdProperty", "cfdRegime", "geometrySection", "geometryProperty", 
			"geometryMode", "generationSection", "generationProperty", "generationBackend", 
			"sliceSection", "sliceProperty", "statistical2dSection", "statistical2dProperty"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bed'", "'{'", "'}'", "'diameter'", "'='", "';'", "'height'", 
			"'wall_thickness'", "'clearance'", "'material'", "'roughness'", "'internal_cylinder_mode'", 
			"'visibility'", "'show_outer_cylinder'", "'show_internal_cylinder'", 
			"'show_particles'", "'show_boolean_tools'", "'export_boolean_tools'", 
			"'lids'", "'top_type'", "'bottom_type'", "'top_thickness'", "'bottom_thickness'", 
			"'seal_clearance'", "'flat'", "'hemispherical'", "'none'", "'particles'", 
			"'kind'", "'count'", "'target_porosity'", "'density'", "'mass'", "'restitution'", 
			"'friction'", "'rolling_friction'", "'linear_damping'", "'angular_damping'", 
			"'seed'", "'sphere'", "'cube'", "'cylinder'", "'packing'", "'method'", 
			"'gravity'", "'substeps'", "'iterations'", "'damping'", "'rest_velocity'", 
			"'max_time'", "'collision_margin'", "'gap'", "'random_seed'", "'max_placement_attempts'", 
			"'strict_validation'", "'step_x'", "'mesh_segmentos'", "'sphere_lat'", 
			"'sphere_lon'", "'use_legacy_drop'", "'dem'", "'time_step'", "'steps'", 
			"'stiffness'", "'settle_threshold'", "'max_velocity_threshold'", "'rigid_body'", 
			"'export'", "'formats'", "'['", "']'", "'units'", "'scale'", "'wall_mode'", 
			"'fluid_mode'", "'manifold_check'", "'merge_distance'", "','", "'surface'", 
			"'solid'", "'cavity'", "'cfd'", "'regime'", "'inlet_velocity'", "'fluid_density'", 
			"'fluid_viscosity'", "'max_iterations'", "'convergence_criteria'", "'write_fields'", 
			"'laminar'", "'turbulent_rans'", "'geometry'", "'mode'", "'full_3d'", 
			"'pseudo_2d_thin_slice'", "'pseudo_2d_statistical'", "'generation'", 
			"'backend'", "'python_engine'", "'blender'", "'slice'", "'enabled'", 
			"'thickness'", "'axis'", "'position'", "'keep_only_intersecting_particles'", 
			"'preserve_original_packing'", "'slice_particle_policy'", "'debug_export_gizmos'", 
			"'statistical_2d'", "'domain_width'", "'domain_height'", "'tolerance'", 
			"'max_attempts'", "'slice_thickness'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "NUMBER", "INTEGER", 
			"UNIT", "STRING", "BOOLEAN", "WS", "COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bed.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BedFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BedParser.EOF, 0); }
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public BedFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedFile; }
	}

	public final BedFileContext bedFile() throws RecognitionException {
		BedFileContext _localctx = new BedFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bedFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				section();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__18) | (1L << T__27) | (1L << T__42))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (T__67 - 68)) | (1L << (T__81 - 68)) | (1L << (T__91 - 68)) | (1L << (T__96 - 68)) | (1L << (T__100 - 68)) | (1L << (T__109 - 68)))) != 0) );
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public BedSectionContext bedSection() {
			return getRuleContext(BedSectionContext.class,0);
		}
		public LidsSectionContext lidsSection() {
			return getRuleContext(LidsSectionContext.class,0);
		}
		public ParticlesSectionContext particlesSection() {
			return getRuleContext(ParticlesSectionContext.class,0);
		}
		public PackingSectionContext packingSection() {
			return getRuleContext(PackingSectionContext.class,0);
		}
		public ExportSectionContext exportSection() {
			return getRuleContext(ExportSectionContext.class,0);
		}
		public CfdSectionContext cfdSection() {
			return getRuleContext(CfdSectionContext.class,0);
		}
		public GeometrySectionContext geometrySection() {
			return getRuleContext(GeometrySectionContext.class,0);
		}
		public GenerationSectionContext generationSection() {
			return getRuleContext(GenerationSectionContext.class,0);
		}
		public SliceSectionContext sliceSection() {
			return getRuleContext(SliceSectionContext.class,0);
		}
		public Statistical2dSectionContext statistical2dSection() {
			return getRuleContext(Statistical2dSectionContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				bedSection();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				lidsSection();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				particlesSection();
				}
				break;
			case T__42:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				packingSection();
				}
				break;
			case T__67:
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				exportSection();
				}
				break;
			case T__81:
				enterOuterAlt(_localctx, 6);
				{
				setState(78);
				cfdSection();
				}
				break;
			case T__91:
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				geometrySection();
				}
				break;
			case T__96:
				enterOuterAlt(_localctx, 8);
				{
				setState(80);
				generationSection();
				}
				break;
			case T__100:
				enterOuterAlt(_localctx, 9);
				{
				setState(81);
				sliceSection();
				}
				break;
			case T__109:
				enterOuterAlt(_localctx, 10);
				{
				setState(82);
				statistical2dSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BedSectionContext extends ParserRuleContext {
		public List<BedPropertyContext> bedProperty() {
			return getRuleContexts(BedPropertyContext.class);
		}
		public BedPropertyContext bedProperty(int i) {
			return getRuleContext(BedPropertyContext.class,i);
		}
		public BedSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedSection; }
	}

	public final BedSectionContext bedSection() throws RecognitionException {
		BedSectionContext _localctx = new BedSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bedSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__0);
			setState(86);
			match(T__1);
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(87);
				bedProperty();
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0) );
			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BedPropertyContext extends ParserRuleContext {
		public BedPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedProperty; }
	 
		public BedPropertyContext() { }
		public void copyFrom(BedPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BedWallThicknessContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedWallThicknessContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedMaterialContext extends BedPropertyContext {
		public TerminalNode STRING() { return getToken(BedParser.STRING, 0); }
		public BedMaterialContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedInternalCylinderModeContext extends BedPropertyContext {
		public TerminalNode STRING() { return getToken(BedParser.STRING, 0); }
		public BedInternalCylinderModeContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedClearanceContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedClearanceContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedDiameterContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedDiameterContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedRoughnessContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedRoughnessContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedVisibilityBlockContext extends BedPropertyContext {
		public List<VisibilityPropertyContext> visibilityProperty() {
			return getRuleContexts(VisibilityPropertyContext.class);
		}
		public VisibilityPropertyContext visibilityProperty(int i) {
			return getRuleContext(VisibilityPropertyContext.class,i);
		}
		public BedVisibilityBlockContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedHeightContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedHeightContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}

	public final BedPropertyContext bedProperty() throws RecognitionException {
		BedPropertyContext _localctx = new BedPropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bedProperty);
		int _la;
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				_localctx = new BedDiameterContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(T__3);
				setState(95);
				match(T__4);
				setState(96);
				match(NUMBER);
				setState(97);
				match(UNIT);
				setState(98);
				match(T__5);
				}
				break;
			case T__6:
				_localctx = new BedHeightContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(T__6);
				setState(100);
				match(T__4);
				setState(101);
				match(NUMBER);
				setState(102);
				match(UNIT);
				setState(103);
				match(T__5);
				}
				break;
			case T__7:
				_localctx = new BedWallThicknessContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				match(T__7);
				setState(105);
				match(T__4);
				setState(106);
				match(NUMBER);
				setState(107);
				match(UNIT);
				setState(108);
				match(T__5);
				}
				break;
			case T__8:
				_localctx = new BedClearanceContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				match(T__8);
				setState(110);
				match(T__4);
				setState(111);
				match(NUMBER);
				setState(112);
				match(UNIT);
				setState(113);
				match(T__5);
				}
				break;
			case T__9:
				_localctx = new BedMaterialContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				match(T__9);
				setState(115);
				match(T__4);
				setState(116);
				match(STRING);
				setState(117);
				match(T__5);
				}
				break;
			case T__10:
				_localctx = new BedRoughnessContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(118);
				match(T__10);
				setState(119);
				match(T__4);
				setState(120);
				match(NUMBER);
				setState(121);
				match(UNIT);
				setState(122);
				match(T__5);
				}
				break;
			case T__11:
				_localctx = new BedInternalCylinderModeContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(123);
				match(T__11);
				setState(124);
				match(T__4);
				setState(125);
				match(STRING);
				setState(126);
				match(T__5);
				}
				break;
			case T__12:
				_localctx = new BedVisibilityBlockContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(127);
				match(T__12);
				setState(128);
				match(T__1);
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(129);
					visibilityProperty();
					}
					}
					setState(132); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0) );
				setState(134);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilityPropertyContext extends ParserRuleContext {
		public VisibilityPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibilityProperty; }
	 
		public VisibilityPropertyContext() { }
		public void copyFrom(VisibilityPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VisShowOuterContext extends VisibilityPropertyContext {
		public TerminalNode BOOLEAN() { return getToken(BedParser.BOOLEAN, 0); }
		public VisShowOuterContext(VisibilityPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class VisShowInternalContext extends VisibilityPropertyContext {
		public TerminalNode BOOLEAN() { return getToken(BedParser.BOOLEAN, 0); }
		public VisShowInternalContext(VisibilityPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class VisShowParticlesContext extends VisibilityPropertyContext {
		public TerminalNode BOOLEAN() { return getToken(BedParser.BOOLEAN, 0); }
		public VisShowParticlesContext(VisibilityPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class VisShowBooleanToolsContext extends VisibilityPropertyContext {
		public TerminalNode BOOLEAN() { return getToken(BedParser.BOOLEAN, 0); }
		public VisShowBooleanToolsContext(VisibilityPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class VisExportBooleanToolsContext extends VisibilityPropertyContext {
		public TerminalNode BOOLEAN() { return getToken(BedParser.BOOLEAN, 0); }
		public VisExportBooleanToolsContext(VisibilityPropertyContext ctx) { copyFrom(ctx); }
	}

	public final VisibilityPropertyContext visibilityProperty() throws RecognitionException {
		VisibilityPropertyContext _localctx = new VisibilityPropertyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_visibilityProperty);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				_localctx = new VisShowOuterContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(T__13);
				setState(139);
				match(T__4);
				setState(140);
				match(BOOLEAN);
				setState(141);
				match(T__5);
				}
				break;
			case T__14:
				_localctx = new VisShowInternalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(T__14);
				setState(143);
				match(T__4);
				setState(144);
				match(BOOLEAN);
				setState(145);
				match(T__5);
				}
				break;
			case T__15:
				_localctx = new VisShowParticlesContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				match(T__15);
				setState(147);
				match(T__4);
				setState(148);
				match(BOOLEAN);
				setState(149);
				match(T__5);
				}
				break;
			case T__16:
				_localctx = new VisShowBooleanToolsContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				match(T__16);
				setState(151);
				match(T__4);
				setState(152);
				match(BOOLEAN);
				setState(153);
				match(T__5);
				}
				break;
			case T__17:
				_localctx = new VisExportBooleanToolsContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(154);
				match(T__17);
				setState(155);
				match(T__4);
				setState(156);
				match(BOOLEAN);
				setState(157);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LidsSectionContext extends ParserRuleContext {
		public List<LidsPropertyContext> lidsProperty() {
			return getRuleContexts(LidsPropertyContext.class);
		}
		public LidsPropertyContext lidsProperty(int i) {
			return getRuleContext(LidsPropertyContext.class,i);
		}
		public LidsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lidsSection; }
	}
